--- a/YuzTanima/Info.plist
+++ b/YuzTanima/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>To Autontack</string>
 </dict>
 </plist>
